<resources>
    <string name="app_name">AppClinica</string>
    <string name="title_citas">Citas</string>
    <string name="title_servicios">Servicios</string>
    <string name="title_campana">Campañas</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_contactar">Contáctanos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detalle_five">DetalleFiveActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_alarma">AlarmaActivity</string>


    <string name="sett_reminder_header">Poner alarma</string>
    <string name="sett_reminder_label">Recordatorio</string>
    <string name="sett_reminder_desc">Te recordaremos tomar tu medicamento</string>
    <string name="sett_reminder_time_label">Fijar hora del recordatorio</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
</resources>
