<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jquirogl.appclinicaproject.AlarmaActivity">

    <LinearLayout
        android:id="@+id/llReminder"
        style="@style/settings_item_layout">

        <TextView
            android:id="@+id/tv_reminder_header"
            style="@style/settings_header"
            android:text="@string/sett_reminder_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_reminder_label"
                style="@style/settings_sub_header"
                android:text="@string/sett_reminder_label" />

            <android.support.v7.widget.SwitchCompat
                android:theme="@style/AppTheme"
                android:id="@+id/timerSwitch"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_reminder_desc"
            style="@style/settings_details"
            android:paddingTop="@dimen/items_top_padding"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:text="@string/sett_reminder_desc" />

        <LinearLayout
            android:id="@+id/ll_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label"
                    style="@style/settings_sub_header"
                    android:text="@string/sett_reminder_time_label" />

                <ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_timer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc"
                style="@style/settings_details"
                android:paddingTop="@dimen/items_top_padding"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:text="@string/sett_reminder_time_content" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_set_time_repetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label_repetir"
                    style="@style/settings_sub_header"
                    android:text="Repetir cada:" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tv_reminder_time_desc_repetir"
                    android:maxLength="2"
                    android:inputType="number"
                    android:maxLines="1"
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:paddingTop="@dimen/items_top_padding"
                    android:paddingBottom="@dimen/items_inbetween_space"
                    android:text="8"
                    android:layout_weight="0.5"
                    />
                <TextView
                    android:text="Horas"
                    android:id="@+id/tvHoras"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/textColorSecondary"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        style="@style/settings_item_layout">
        <TextView
            android:id="@+id/tv_agree_header"
            style="@style/settings_header"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:text="Detalle" />

        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:paddingTop="@dimen/items_inbetween_space">

            <TextView
                android:id="@+id/tvNombre"
                style="@style/settings_sub_header"
                android:text="Ibuprofeno" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:paddingTop="@dimen/items_inbetween_space">

            <TextView
                android:id="@+id/tvDosis"
                style="@style/settings_sub_header"
                android:text="Una tableta" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
